Fixes URL-s building to pass into CDCAppClassLoader instance. Prior to this fix if some path pointed not to a jar file, but a directory, its URL representation didn't have trailing slash and CDCAppClassLoader failed to interpret such URL properly and didn't find app class. Reviewed by Chihiro.